# internal/handler/http/api/v1/anime/controller.go
@@ -4,6 +4,8 @@ import (
 	"context"
 
 	"anilibrary-scraper/internal/entity"
+	"anilibrary-scraper/internal/handler/http/api/v1/anime/request"
+	"anilibrary-scraper/internal/handler/http/api/v1/anime/response"
 	"anilibrary-scraper/internal/metrics"
 	"anilibrary-scraper/internal/usecase/scraper"
 	"anilibrary-scraper/pkg/logging"
@@ -36,11 +38,11 @@ func NewController(useCase ScraperUseCase) Controller {
 //	@Tags			anime
 //	@Accept			json
 //	@Produce		json
-//	@Param			Authorization	header		string			true	"Access token"	default(Bearer)
-//	@Param			url				body		ScrapeRequest	true	"Url to scrape from"
-//	@Success		200				{object}	ScrapeResponse
+//	@Param			Authorization	header		string					true	"Access token"	default(Bearer)
+//	@Param			url				body		request.ScrapeRequest	true	"Url to scrape from"
+//	@Success		200				{object}	response.ScrapeResponse
 //	@Failure		401				string		Unauthorized
-//	@Failure		422				{object}	ErrorResponse
+//	@Failure		422				{object}	response.ErrorResponse
 //	@Router			/anime/parse [post]
 func (c Controller) Parse(ctx *fiber.Ctx) error {
 	span := trace.SpanFromContext(ctx.UserContext())
@@ -48,20 +50,20 @@ func (c Controller) Parse(ctx *fiber.Ctx) error {
 
 	span.AddEvent("Decoding and validating request")
 
-	var request ScrapeRequest
-	if err := request.MapAndValidate(ctx); err != nil {
+	var req request.ScrapeRequest
+	if err := req.MapAndValidate(ctx); err != nil {
 		metrics.IncrHTTPErrorsCounter()
 		span.SetStatus(codes.Error, err.Error())
 		span.RecordError(err)
 
-		return ctx.Status(fiber.StatusUnprocessableEntity).JSON(NewErrorResponse(err))
+		return ctx.Status(fiber.StatusUnprocessableEntity).JSON(response.NewErrorResponse(err))
 	}
 
-	logging.Get().Info("Scraping", zap.String("url", request.URL))
+	logging.Get().Info("Scraping", zap.String("url", req.URL))
 	span.AddEvent("Scraping data")
 
 	anime, err := c.useCase.Scrape(ctx.UserContext(), scraper.DTO{
-		URL:       request.URL,
+		URL:       req.URL,
 		IP:        ctx.IP(),
 		UserAgent: ctx.Get("User-Agent"),
 	})
@@ -71,11 +73,11 @@ func (c Controller) Parse(ctx *fiber.Ctx) error {
 		span.RecordError(err)
 		logging.Get().Error("while scraping", zap.Error(err))
 
-		return ctx.Status(fiber.StatusUnprocessableEntity).JSON(NewErrorResponse(err))
+		return ctx.Status(fiber.StatusUnprocessableEntity).JSON(response.NewErrorResponse(err))
 	}
 
 	span.AddEvent("Finished scraping")
 
 	metrics.IncrHTTPSuccessCounter()
-	return ctx.JSON(EntityToResponse(anime))
+	return ctx.JSON(response.NewScrapeResponse(anime))
 }
