# internal/handler/http/api/v1/anime/response/error.go
@@ -1,0 +1,11 @@
+package response
+
+type ErrorResponse struct {
+	Message string `json:"message"`
+}
+
+func NewErrorResponse(err error) ErrorResponse {
+	return ErrorResponse{
+		Message: err.Error(),
+	}
+}
